add url to nevigation icons

--- a/block-BHaacm/index.html
+++ b/block-BHaacm/index.html
@@ -87,8 +87,8 @@
         <small>&copy Altcampus</small>
         <nav class="navbar">
             <ul class="flex align-center">
-                <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
+                <li><a href="https://wwww.facebook.com"><i class="fab fa-facebook-square"></i></a></li>
+                <li><a href="https://wwww.fa-twitter.com"><i class="fab fa-twitter-square"></i></a></li>
             </ul>
         </nav>
         </section>
