make responsive for 992px screen

--- a/block-BHaacn/index.html
+++ b/block-BHaacn/index.html
@@ -82,14 +82,14 @@
                         <span class="number">1</span>
                     </article>
                     <article class="why-join-article flex-31 width-100">
-                        <h3 class="heading-secondary">Network</h3>
+                        <h3 class="heading-secondary">Great Speakers</h3>
                         <p class="para-small">Lorem Ipsum has been the industry's standard dummy text ever since the
                             1500s, when an unknown printer took a gallery of type and scrambled it to make a type
                             specimen book.</p>
                         <span class="number">2</span>
                     </article>
                     <article class="why-join-article flex-31 width-100">
-                        <h3 class="heading-secondary">Network</h3>
+                        <h3 class="heading-secondary">Information  </h3>
                         <p class="para-small">Lorem Ipsum has been the industry's standard dummy text ever since the
                             1500s, when an unknown printer took a gallery of type and scrambled it to make a type
                             specimen book.</p>
@@ -207,7 +207,7 @@
             <section class="container">
             <h2 class="heading">Our Latest News</h2>
 
-            <section class="flex justify-between item-center wrap">
+            <section class="flex justify-between item-stretch wrap">
                 <article class="news-article flex-31 width-100">
                     <div class="width-full">
                         <img src="./assets/media/news-01.png" alt="news image">
@@ -248,7 +248,7 @@
             <div class="flex flex-48 justify-between justify-around-mobile width-100">
                 <nav class="flex-60 width-25">
                     <h5>Quick Links</h5>
-                    <ul class="flex justify-between wrap quick-links">
+                    <ul class="flex justify-between wrap ms-wrap quick-links">
                         <li><a href="#" class="">Program</a></li>
                         <li><a href="#" class="">About Us</a></li>
                         <li><a href="#" class="">Contact Us</a></li>
